--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "primereact": "^10.9.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.64.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
