--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/node": "^24.7.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "typescript": "^5.9.3"
   }
 }
