--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@appwrite.io/pink-icons": "^1.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "appwrite": "^18.1.1",
+    "axios": "^1.12.2",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "next": "15.4.3",
     "postcss": "^8.5.6",
     "primereact": "^10.9.7",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.64.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^24.7.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
