--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "next": "15.4.3",
+    "next-nprogress-bar": "^2.1.0",
     "postcss": "^8.5.6",
     "primereact": "^10.9.7",
     "react": "^19.1.0",
