--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@appwrite.io/pink-icons": "^1.0.0",
+    "@bprogress/next": "^3.2.12",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -20,7 +21,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "next": "15.4.3",
-    "next-nprogress-bar": "^2.1.0",
+    "next-nprogress-bar": "^2.4.7",
     "postcss": "^8.5.6",
     "primereact": "^10.9.7",
     "react": "^19.1.0",
