feat: integrate Flowbite React for UI components and modals
- Added flowbite-react dependency to package.json.
- Updated app.css to include Flowbite React plugin and class list.
- Refactored Navbar component for improved styling.
- Changed cardData IDs from numbers to strings for consistency.
- Modified Bantuan component layout for better responsiveness.
- Implemented LoginPromptModal for user authentication prompts in DetailART and MitraBantuanCard components.
- Enhanced user experience by adding hooks for contact actions and login redirection.
- Created custom theme for Flowbite components to match application design.
- Added VSCode settings for Tailwind CSS support.
- Introduced new hooks and components for managing authentication and contact actions.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "flowbite-react": "^0.12.9",
     "framer-motion": "^12.23.24",
     "next": "15.4.3",
     "next-nprogress-bar": "^2.4.7",
