--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.6.0",
     "flowbite-react": "^0.12.9",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "next": "15.4.3",
     "next-nprogress-bar": "^2.4.7",
     "postcss": "^8.5.6",
