--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.64.0",
     "tailwindcss": "^4.1.11"
   },
